--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@ badge-primary">Moodle</a>
 				<th></th>
 			</tr>
 			<tr>
+				<td>2025</td>
+				<td>Crossing-Preserving Geodesic Tracking on Spherical Images</td>
+				<td>N.J. van den Berg, F.M. Sherry, Tos T.J.M. Berendschot, R. Duits</td>
+				<td>Preprint</td>
+				<td><a href="https://arxiv.org/abs/2504.03388" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
+			</tr>
+			<tr>
 				<td>2024</td>
 				<td>Connected Components on Lie Groups and Applications to Multi-Orientation Image Analysis</td>
 				<td>N.J. van den Berg, O. Mula, L. Vis, R. Duits</td>
@@ -245,6 +252,20 @@ badge-primary">Moodle</a>
 				<td>Invited Talk</td>
 				<td>Algebra Seminar Georgia Tech</td>
 				<td>Lie Groups and Applications to Multi-Orientation Image Analysis</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>14 March 2025</td>
+				<td>Research Talk</td>
+				<td>Ophthalmology Seminar Maastricht UMC+</td>
+				<td>Image Analysis on Retinal Images</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>14 March 2025</td>
+				<td>CASA Day</td>
+				<td>Conferentiecentrum Eindhoven</td>
+				<td>Geodesic Tracking on Retinal Images</td>
 				<td></td>
 			</tr>
 		  </table>
@@ -505,6 +526,22 @@ badge-primary">Moodle</a>
                 <div class="timeline-body">
                   <p>The research focuses on correctly identifying and tracking the vasculature depicted on retinal images.<br>
 					Supervision: Remco Duits, Olga Mula.
+                </div>
+                <!-- <div class="timeline-body">
+                  <p><i class="fas fa-file-signature"></i> FPU fellowship</p>
+                </div> -->
+              </div>
+            </li>
+            <li class="timeline">
+              <div class="timeline-badge warning"><i class="fas fa-briefcase"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Visiting Researcher</h4>
+                  <h5 class="timeline-subtitle">Emory</h5>
+                  <p><small class="text-muted"><i class="fas fa-calendar-alt"></i> Oct 2024</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>Host: Lars Ruthotto.
                 </div>
                 <!-- <div class="timeline-body">
                   <p><i class="fas fa-file-signature"></i> FPU fellowship</p>
