Added two presentations and updated publications

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ badge-primary">Moodle</a>
 				<td>2025</td>
 				<td>Crossing-Preserving Geodesic Tracking on Spherical Images</td>
 				<td>N.J. van den Berg, F.M. Sherry, Tos T.J.M. Berendschot, R. Duits</td>
-				<td>Preprint</td>
-				<td><a href="https://arxiv.org/abs/2504.03388" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
+				<td>Conference</td>
+				<td><a href="https://link.springer.com/chapter/10.1007/978-3-031-92369-2_15" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
 			</tr>
 			<tr>
 				<td>2024</td>
@@ -262,10 +262,17 @@ badge-primary">Moodle</a>
 				<td></td>
 			</tr>
 			<tr>
-				<td>14 March 2025</td>
+				<td>16 April 2025</td>
 				<td>CASA Day</td>
 				<td>Conferentiecentrum Eindhoven</td>
 				<td>Geodesic Tracking on Retinal Images</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>27 May 2025</td>
+				<td>Real World Applications of Geometry and Algebra (RAGA) 2025</td>
+				<td>Eindhoven University of Technology</td>
+				<td>Geodesic Tracking of Vascular Trees in Retinal Images</td>
 				<td></td>
 			</tr>
 		  </table>
