Update Talks RAGA2025

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@ badge-primary">Moodle</a>
 			</tr>
 			<tr>
 				<td>27 May 2025</td>
+				<td>Invited Talk</td>
 				<td>Real World Applications of Geometry and Algebra (RAGA) 2025</td>
-				<td>Eindhoven University of Technology</td>
 				<td>Geodesic Tracking of Vascular Trees in Retinal Images</td>
 				<td></td>
 			</tr>
