Update CV, incl. posters

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <a class="nav-link" href="#pres">Presentations</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#poster">Posters</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#supervision">Supervision</a>
               </li>
               <li class="nav-item">
@@ -220,45 +223,10 @@ badge-primary">Moodle</a>
 				<th></th>
 			</tr>
 			<tr>
-				<td>13 April 2022</td>
-				<td>CASA Day</td>
-				<td>Evoluon</td>
-				<td>Geodesic Tracking via New Data-Driven Cartan Connections for Vascular Tree Tracking</td>
-				<td><!-- <a href="img/20220412 CASA Day April 2022 - Nicky.pptx" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a>--></td>
-			</tr>
-			<tr>
-				<td>31 March 2023</td>
-				<td>Research Talk</td>
-				<td>Maastricht University</td>
-				<td>Geodesic Tracking of Retinal Vascular Trees with Optical and TV-Flow Enhancement in the Lifted Space of Positions and Orientations SE(2)</td>
-				<td><!-- <a href="" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a>--></td>
-			</tr>
-			<tr>
-				<td>19 June 2024</td>
-				<td>Conference Talk</td>
-				<td>Geometry and Machine Learning (Scalea)</td>
-				<td>Geodesic Tracking via Data-Driven Geometry for Vascular Tree Tracking</td>
-				<td><a href="files/20240619_GML2024_Scalea.pdf" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a></td>
-			</tr>
-			<tr>
-				<td>1 October 2024</td>
-				<td>Research Talk</td>
-				<td>Emory</td>
-				<td>Lie Groups and Applications to Multi-Orientation Image Analysis</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>7 October 2024</td>
+				<td>27 May 2025</td>
 				<td>Invited Talk</td>
-				<td>Algebra Seminar Georgia Tech</td>
-				<td>Lie Groups and Applications to Multi-Orientation Image Analysis</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>14 March 2025</td>
-				<td>Research Talk</td>
-				<td>Ophthalmology Seminar Maastricht UMC+</td>
-				<td>Image Analysis on Retinal Images</td>
+				<td>Real World Applications of Geometry and Algebra (RAGA) 2025</td>
+				<td>Geodesic Tracking of Vascular Trees in Retinal Images</td>
 				<td></td>
 			</tr>
 			<tr>
@@ -269,11 +237,78 @@ badge-primary">Moodle</a>
 				<td></td>
 			</tr>
 			<tr>
-				<td>27 May 2025</td>
-				<td>Invited Talk</td>
-				<td>Real World Applications of Geometry and Algebra (RAGA) 2025</td>
-				<td>Geodesic Tracking of Vascular Trees in Retinal Images</td>
+				<td>14 March 2025</td>
+				<td>Research Talk</td>
+				<td>Ophthalmology Seminar Maastricht UMC+</td>
+				<td>Image Analysis on Retinal Images</td>
 				<td></td>
+			</tr>
+			<tr>
+				<td>7 October 2024</td>
+				<td>Invited Talk</td>
+				<td>Algebra Seminar Georgia Tech</td>
+				<td>Lie Groups and Applications to Multi-Orientation Image Analysis</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>1 October 2024</td>
+				<td>Research Talk</td>
+				<td>Emory</td>
+				<td>Lie Groups and Applications to Multi-Orientation Image Analysis</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>19 June 2024</td>
+				<td>Conference Talk</td>
+				<td>Geometry and Machine Learning (Scalea)</td>
+				<td>Geodesic Tracking via Data-Driven Geometry for Vascular Tree Tracking</td>
+				<td><a href="files/20240619_GML2024_Scalea.pdf" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a></td>
+			</tr>
+			<tr>
+				<td>31 March 2023</td>
+				<td>Research Talk</td>
+				<td>Maastricht University</td>
+				<td>Geodesic Tracking of Retinal Vascular Trees with Optical and TV-Flow Enhancement in the Lifted Space of Positions and Orientations SE(2)</td>
+				<td><!-- <a href="" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a>--></td>
+			</tr>
+			<tr>
+				<td>13 April 2022</td>
+				<td>CASA Day</td>
+				<td>Evoluon</td>
+				<td>Geodesic Tracking via New Data-Driven Cartan Connections for Vascular Tree Tracking</td>
+				<td><!-- <a href="img/20220412 CASA Day April 2022 - Nicky.pptx" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a>--></td>
+			</tr>
+		  </table>
+        </section>
+		<br>
+		
+		<section id="poster" class="mt-5">
+		  <h3 class="display-5">Posters</h3>
+          <hr>
+          <table id="Table" class="display" table-layout = fixed>
+			<tr>
+				<th>Date</th>
+				<th>Occasion</th>
+				<th>Title</th>
+				<th></th>
+			</tr>
+			<tr>
+				<td>May 2025</td>
+				<td>SSVM 2025</td>
+				<td>Crossing-Preserving Geodesic Tracking on Spherical Images</td>
+				<td><a href="files/SSVM2025_Nicky.pdf" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
+			</tr>
+			<tr>
+				<td>April 2024</td>
+				<td>NMC 2024</td>
+				<td>Geodesic Tracking of Retinal Vascular Trees with Optical and TV-Flow Enhancement in SE(2)</td>
+				<td><a href="files/NMC2024_Nicky.pdf" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
+			</tr>
+			<tr>
+				<td>May, November 2024</td>
+				<td>SSVM 2023, CASA day 2023</td>
+				<td>Geodesic Tracking of Retinal Vascular Trees with Optical and TV-Flow Enhancement in SE(2)</td>
+				<td><a href="files/SSVM2023_Nicky.pdf" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file"></i></a></td>
 			</tr>
 		  </table>
         </section>
@@ -298,7 +333,7 @@ badge-primary">Moodle</a>
 @InProceedings{Kompanents2023Segmentation,
         author="Kompanets, Andrii and Duits, Remco and Leonetti, Davide and van den Berg, Nicky and Snijder, H. H.",
         editor="Skatulla, Sebastian and Beushausen, Hans",
-        title="Segmentation Tool for Images of Cracks",
+        title="Segmentation Tool forï¿½Images ofï¿½Cracks",
         booktitle="Advances in Information Technology in Civil and Building Engineering",
         year="2024",
         publisher="Springer International Publishing",
