Added Tos and Olga to supervision

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="I am a PhD student in applied mathematics at Eindhoven University of Technology under the supervision of dr.ir. R. Duits in the Geometric Learning and Differential Geometry group (GLDG) of the Centre for Analysis, Scientific Computing and Applications (CASA) cluster. My research interests include differential geometry, PDEs, numerical methods, geometric tracking and medical image analysis.">
+    <meta name="description" content="I am a PhD student in applied mathematics at Eindhoven University of Technology under the supervision of dr.ir. R. Duits, dr. T.J.M.M. Berendschot and dr. O. Mula in the Geometric Learning and Differential Geometry group (GLDG) of the Centre for Analysis, Scientific Computing and Applications (CASA) cluster. My research interests include differential geometry, PDEs, numerical methods, geometric tracking and medical image analysis.">
     <meta name="keywords" content="Nicky van den Berg,Nicky J. van den Berg,N.J. van den Berg,N. van den Berg,N vanden Berg, N Vandenberg,Technische Universiteit Eindhoven,Eindhoven University of Technology,TU/e,Mathematics,Wiskunde,Differential Geometry,Tracking,PDEs,Numerical Methods,Geometric Tracking,Medical Image Analysis,PhD">
     <meta name="author" content="Nicky J. van den Berg">
 
@@ -567,7 +567,7 @@ badge-primary">Moodle</a>
                 </div>
                 <div class="timeline-body">
                   <p>The research focuses on correctly identifying and tracking the vasculature depicted on retinal images.<br>
-					Supervision: Remco Duits, Olga Mula.
+					Supervision: Remco Duits, Tos Berendschot, Olga Mula.
                 </div>
                 <!-- <div class="timeline-body">
                   <p><i class="fas fa-file-signature"></i> FPU fellowship</p>
