--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ badge-primary">Moodle</a>
 				<th>Authors</th>
 				<th>Type</th>
 				<th></th>
-			</tr>PhDthesis_NickyJvandenBerg
+			</tr>
 			<tr>
 				<td>2025</td>
 				<td>Geometric Tracking and Grouping of Complex Vasculatures in Medical Images</td>
@@ -248,7 +248,7 @@ badge-primary">Moodle</a>
 				<td>Research Talk</td>
 				<td>Ophthalmology Seminar Maastricht UMC+</td>
 				<td>Image Analysis on Retinal Images</td>
-				<td><a href = "files/20230314_Maastricht_University.pptx" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a></td>
+				<td><!--<a href = "files/20230314_Maastricht_University.pptx" target="_blank" rel="noopener noreferrer" alt="doc"><i class="far fa-file-powerpoint"></i></a>--></td>
 			</tr>
 			<tr>
 				<td>7 October 2024</td>
